--- a/composer.json
+++ b/composer.json
@@ -18,9 +18,20 @@
         "acquia/memcache-settings": "^1",
         "composer/installers": "^1.9",
         "cweagans/composer-patches": "^1.6",
+        "drupal/admin_toolbar": "^3.1",
         "drupal/core-composer-scaffold": "^9",
         "drupal/core-recommended": "^9",
+        "drupal/devel": "^4.1",
+        "drupal/html_title": "^1.4",
+        "drupal/memcache": "^2.3",
+        "drupal/metatag": "^1.19",
+        "drupal/paragraphs": "^1.14",
+        "drupal/protected_pages": "^1.4",
+        "drupal/quick_node_clone": "^1.15",
         "drupal/upgrade_status": "^3.13",
+        "drupal/views_bulk_edit": "^2.6",
+        "drupal/views_bulk_operations": "^4.1",
+        "drupal/webform": "^6.1",
         "drush/drush": "^10.6 || ^11",
         "oomphinc/composer-installers-extender": "^1.1 || ^2"
     },
