--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "composer/installers": "^1.9",
         "cweagans/composer-patches": "^1.6",
         "drupal/admin_toolbar": "^3.1",
+        "drupal/adminimal_theme": "^1.6",
         "drupal/core-composer-scaffold": "^9",
         "drupal/core-recommended": "^9",
         "drupal/devel": "^4.1",
